# opensovd-core

./: .gitignore  CONTRIBUTORS  Cargo.toml  README.md  about.toml  build.cmd  build.sh
config/: sovd_server_apps.conf
docs/architecture/: Gateway_SOVD_Server_Sequence.svg:Zone.Identifier  platuml_sovd_gateway_arch.puml  sovd_gateway_sovd_server_seq.puml
sovd-handlers/: Cargo.toml
sovd-handlers/src/: lib.rs
sovd-handlers/tests/: sovd_handlers_tests.rs
sovd-interfaces/: NOTICE.md
sovd-server/: Cargo.toml
sovd-server/src/: lib.rs  main.rs  server_config.rs  sovd_server.rs
sovd-server/src/apis/: bulk_data.rs  capabilities.rs  communication_logs.rs  configurations.rs  data_retrieval.rs  discovery.rs  fault_handling.rs  locking.rs  logging.rs  mod.rs  operations_controls.rs  target_modes.rs  updates.rs
sovd-server/src/config/: configfile.rs  mod.rs
sovd-server/tests/: README.md  integration_tests.rs
sovd-tracing/: Cargo.toml
sovd-tracing/src/: lib.rs  otel.rs  subscriber.rs
