# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "opensovd-server"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Eclipse OpenSOVD Server - A modern, open source Service Oriented Vehicle Diagnostics Server written in Rust"
homepage.workspace = true
license.workspace = true

[[bin]]
name = "opensovd-server"
path = "src/main.rs"

[lib]
name = "opensovd_server_lib"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
axum-extra = "0.10.3"

# args
clap = { workspace = true, features = ["derive"] }

# config
figment = { workspace = true, features = ["env", "toml"] }
sovd-api = { workspace = true, features = ["server", "conversion"] }
sovd-handlers = {workspace = true }
sovd-tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }

# logging & tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "chrono",
  "env-filter",
  "fmt",
  "json",
  "parking_lot",
  "std",
] }
gethostname = "1.1.0"

[features]
default = []
tokio-tracing = ["sovd-tracing/tokio-tracing"]
