# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sovd-server"
description = "Implementation of the sovd server"
edition.workspace = true
publish = false
version = "0.1.0"
homepage.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.42"
clap = "2.25"
flexi_logger = "0.31.7"
futures = "0.3.31"
hyper = { workspace = true }
log = { workspace = true }
mdns-sd = "0.15.1"
once_cell = "1.21.3"
openapi_client = { workspace = true }
openssl = { workspace = true }
regex = "1.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sovd-handlers = { workspace = true }
swagger = "6.5.3"
tokio = { workspace = true }
tokio-openssl = "0.6.5"
anyhow = "1.0"
[dev-dependencies]
reqwest = "0.12.24"
