# SPDX-FileCopyrightText: 2025 The Contributors to Eclipse OpenSOVD (see CONTRIBUTORS)
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sovd-tracing"
version = "0.1.0"
edition.workspace = true
publish = false
description = "Tracing module used in sovd-server, sovd-gateway and sovd-client"
homepage.workspace = true
license.workspace = true

[dependencies]
hashbrown = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
# logging & tracing
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "ansi",
  "chrono",
  "env-filter",
  "fmt",
  "json",
  "parking_lot",
  "std",
] }
strip-ansi-escapes = { workspace = true } # Strip ANSI escape codes from strings, used for file logging
nu-ansi-term = { workspace = true } # ANSI terminal support for terminal log output
# otel
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { workspace = true, features = ["trace"] }
opentelemetry-otlp = { workspace = true, features = ["metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = { workspace = true, features = [
  "semconv_experimental",
] }

# tokio console
console-subscriber = { workspace = true, optional = true }

[features]
default = []
tokio-tracing = ["dep:console-subscriber", "tokio/tracing"]
